# testapis

./: .bazelrc  BUILD.bazel  MODULE.bazel  Makefile  buf.yaml  go.mod  go.sum  test.proto
organisation/service/test/v1/: BUILD.bazel  test.proto
scripts/: print-workspace-status
