load("@gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@rules_buf//buf:defs.bzl", "buf_lint_test")
load("@rules_proto//proto:defs.bzl", "proto_library")

# Export the buf.yaml to make it available to rules in other packages.
exports_files(["buf.yaml"])

gazelle(
    name = "gazelle",
    gazelle = ":gazelle-buf",
)

gazelle_binary(
    name = "gazelle-buf",
    languages = [
        "@gazelle//language/proto",
        "@rules_buf//gazelle/buf:buf",
    ],
)

proto_library(
    name = "organisation_service_test_v1_proto",
    srcs = ["test.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@buf_deps//google/api:api_proto",
        "@com_google_protobuf//:field_mask_proto",
    ],
)

buf_lint_test(
    name = "organisation_service_test_v1_proto_lint",
    config = "//:buf.yaml",
    targets = [":organisation_service_test_v1_proto"],
)
