load("@buildifier_prebuilt//:rules.bzl", "buildifier_test")
load("@gazelle//:def.bzl", "gazelle")

# add an alias, go_default_library, to each service
# gazelle:go_naming_convention import_alias

# protobuf compilers
# gazelle:go_proto_compilers @rules_go//proto:go_proto
# gazelle:go_grpc_compilers @rules_go//proto:go_grpc,@grpc_gateway//protoc-gen-grpc-gateway:go_gen_grpc_gateway

# protobuf type resolutions
# gazelle:resolve proto proto google/protobuf/field_mask.proto @protobuf//:field_mask_proto
# gazelle:resolve proto proto google/api/annotations.proto @googleapis//google/api:annotations_proto
# gazelle:resolve proto go google/api/annotations.proto @org_golang_google_genproto_googleapis_api//annotations
# gazelle:resolve proto proto google/api/client.proto @googleapis//google/api:client_proto
# gazelle:resolve proto go google/api/client.proto @org_golang_google_genproto_googleapis_api//annotations
gazelle(name = "gazelle")

buildifier_test(
    name = "buildifier",
    srcs = glob([
        "**/*.bazel",
        "**/*.bzl",
    ]),
    lint_mode = "warn",
)
