module(name = "apis")

bazel_dep(name = "buildifier_prebuilt", version = "6.4.0", dev_dependency = True)

# ==========
# === Go ===
# ==========

bazel_dep(name = "rules_go", version = "0.48.0")
bazel_dep(name = "gazelle", version = "0.37.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# External dependencies, as defined in go.mod.
use_repo(
    go_deps,
    "org_golang_google_genproto_googleapis_api",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
)

# ================
# === Protobuf ===
# ================

bazel_dep(name = "rules_proto", version = "6.0.0", dev_dependency = True)

# protobufs and extra compilers.
bazel_dep(name = "protobuf", version = "26.0")
bazel_dep(name = "googleapis", version = "0.0.0-20240326-1c8d509c5")
bazel_dep(name = "grpc_gateway", version = "2.20.0")
