load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "test_proto",
    srcs = ["test.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@googleapis//google/api:annotations_proto",
        "@googleapis//google/api:client_proto",
        "@protobuf//:field_mask_proto",
    ],
)

go_proto_library(
    name = "test_go_proto",
    compilers = [
        "@rules_go//proto:go_grpc",
        "@grpc_gateway//protoc-gen-grpc-gateway:go_gen_grpc_gateway",
    ],
    importpath = "github.com/tomasbasham/testapis/organisation/service/test/v1",
    proto = ":test_proto",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_google_genproto_googleapis_api//annotations"],
)

go_library(
    name = "test",
    embed = [":test_go_proto"],
    importpath = "github.com/tomasbasham/testapis/organisation/service/test/v1",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":test",
    visibility = ["//visibility:public"],
)
